--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,3 +1,57 @@
 .hero-wrapper {
     background-image: url("../../src/image/hero-background.png");
+    padding-top: 40px;
+    padding-bottom: 150px;
+}
+
+.header {
+    padding-bottom: 106px;
+}
+
+header > div {
+    display: flex;
+}
+
+.header__nav ul{
+    display: flex;
+    color: rgba(255, 255, 255, 1);
+    gap: 85px;
+}
+
+.header__nav-ul-li-a {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.3;
+}
+
+.header__nav-ul-li-a-ink-house {
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
+.hero__text-wrapper {
+    width: 570px;
+}
+
+.hero__text-wrapper-h1 {
+    font-size: 80px;
+    font-weight: 500;
+    line-height: 1.2;
+    color: rgba(255, 255, 255, 1);
+}
+.hero__text-wrapper-h2 {
+    font-size: 65px;
+    font-weight: 500;
+    line-height: 1;
+    color: rgba(255, 255, 255, 1);
+    margin-bottom: 10px;
+}
+
+.hero__text-wrapper-p {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-bottom: 22px;
+    color: rgba(255, 255, 255, 1);
 }
