--- a/src/general.css
+++ b/src/general.css
@@ -3,7 +3,7 @@
 @import "./styles/about.css";
 @import "./styles/choose-us.css";
 @import "./styles/services.css";
-
+@import "./styles/free-consultation.css";
 
 
 @font-face {
