Added the contacts.css file

--- a/src/general.css
+++ b/src/general.css
@@ -4,6 +4,8 @@
 @import "./styles/choose-us.css";
 @import "./styles/services.css";
 @import "./styles/free-consultation.css";
+@import "./styles/our-instagram.css";
+@import "./styles/contacts.css";
 
 
 @font-face {
