Added the footer.css

--- a/src/general.css
+++ b/src/general.css
@@ -6,7 +6,7 @@
 @import "./styles/free-consultation.css";
 @import "./styles/our-instagram.css";
 @import "./styles/contacts.css";
-
+@import "./styles/footer.css";
 
 @font-face {
     font-family: Roboto-Slab;
