--- a/src/styles/our-instagram.css
+++ b/src/styles/our-instagram.css
@@ -1,6 +1,9 @@
 .our-instagram {
     padding-top: 135px;
     padding-bottom: 150px;
+    background-image: url("../../src/image/instagram-bg.png");
+    background-position: right  top ;
+    background-repeat: no-repeat;
 }
 
 .our-instagram__h2 {
