--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,7 @@
 .hero-wrapper {
     background-image: url("../../src/image/hero-background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     padding-top: 40px;
     padding-bottom: 150px;
 }
