--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -1,4 +1,4 @@
-.button__style {
+.button--style {
     background: rgba(218, 52, 20, 1);
     color: rgba(255, 255, 255, 1);
     border: 1px solid rgba(218, 52, 20, 1);
@@ -7,5 +7,7 @@
     padding-right: 30px;
     padding-bottom: 15px;
     padding-left: 30px;
-    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.5;
 }
