--- a/src/styles/our-instagram.css
+++ b/src/styles/our-instagram.css
@@ -5,3 +5,51 @@
     background-position: right  top ;
     background-repeat: no-repeat;
 }
+
+
+.our-instagram__heading {
+    text-align: center;
+    color: white;
+    border-bottom: 1px solid #DA3414;
+    margin-bottom: 45px;
+}
+
+.our-instagram__paragraph {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+    text-align: center;
+    color: white;
+}
+
+.our-instagram__list {
+    display: flex;
+justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+}
+
+
+
+.our-instagram__item{
+    height: 300px;
+}
+
+
+.our-instagram__item img{
+    height: 100%;
+}
+
+.our-instagram__button-wrapper {
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+
+}
+.our-instagram__button {
+    text-transform: uppercase;
+
+}
+
+
