--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -3,55 +3,57 @@
     padding-bottom: 195px;
 }
 
-.services__h2 {
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 1;
+.services__heading {
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
-    text-decoration: underline;
     color: rgba(255, 255, 255, 1);
     border-bottom: 1px solid #DA3414;
 }
 
-.our-services__ul {
+.services__list {
     display: flex;
     gap: 75px;
     height: 400px;
     align-items: center;
 }
 
-.our-services__li__h3__img__girl {
-font-weight: 500;
-    font-size: 25px;
-    line-height: 1.3;
-    color: rgba(255, 255, 255, 1);
-    transform: translate(80px,-340px);
+.services__item {
+    height: 340px;
 }
 
-.our-services__li__h3 {
+
+
+
+.services__item img{
+    height: 100%;
+}
+
+.services__item:hover {
+    transform: scale(1.3);
+}
+
+.services__subtitle {
     font-weight: 500;
     font-size: 25px;
     line-height: 1.3;
     color: rgba(255, 255, 255, 1);
-    transform: translate(80px,-290px);
+    transform: translate(65px,-300px);
 }
-
-
-.our-services__li__first {
-    height: 390px;
-}
-
-.our-services__li__first img{
-    height: 100%;
-}
-
-.our-services__li__button {
+.services--button {
     text-transform: capitalize;
     transform: translate(65px,-120px);
 }
 
 .our-services__li {
     height: 340px;
+}
+
+.services--button {
+    display: none;
+}
+
+.services--button:hover {
+    display: block;
+    position: absolute;
 }
