Added contacts styles, footer menu styles, sections ,arkup

--- a/src/styles/choose-us.css
+++ b/src/styles/choose-us.css
@@ -3,7 +3,7 @@
     padding-bottom:40px ;
 }
 
-.choose-us__h2 {
+.choose-us__header {
     color: rgba(218, 52, 20, 1);
     font-size: 30px;
     line-height: 1;
