--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,3 +2,8 @@ footer {
     padding-top: 90px;
     padding-bottom: 90px;
 }
+
+.footer__list {
+    display: flex;
+    justify-content: space-between;
+}
