--- a/src/general.css
+++ b/src/general.css
@@ -8,6 +8,7 @@
 @import "./styles/contacts.css";
 @import "./styles/footer.css";
 @import "./styles/hero.css";
+@import "./styles/components/button.css";
 
 
 @font-face {
@@ -51,9 +52,32 @@
 }
 
 
-
 body {
     font-family: Roboto-Slab, sans-serif;
-    background-color : #05090A;
+    background-color: #05090A;
 }
 
+
+.nav {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.3;
+    display: flex;
+    gap: 85px;
+    color: #FFFFFF;
+}
+
+
+.text {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.5;
+    color: #FFFFFF;
+}
+
+.heading {
+    color: #FFFFFF;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 1;
+}
