--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,44 +1,62 @@
 .about {
-    padding-top: 180px;
-padding-bottom: 40px;
+padding-top: 180px;
+    padding-bottom: 40px;
     background-image: url("../../src/image/about-us_bg.png");
-    background-position: left  top ;
+    background-position: left  top px;
     background-repeat: no-repeat;
+    border-bottom: 2px solid #FFFFFF;
 }
 
-.about__container > div {
+.about__container {
     display: flex;
     gap: 100px;
+
 }
 
-.about__header {
-margin-bottom: 35px;
-    border-bottom: 2px solid orangered;
-    color: #FFFFFF;
+.about__heading {
+    margin-bottom: 30px;
 }
 
-
-
-.choose-us__list {
+.about__heading::after {
+    margin-top: 15px;
     display: flex;
-gap: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 1px;
+    content:  url("../../src/image/Rectangle40.png");
 }
 
-.choose-us__header {
-    margin-bottom: 75px;
-    color: #DA3414;
+.about__image {
+    margin-bottom: 160px;
 }
 
-.choose-us__subtitle {
-    font-size: 20px;
-    line-height: 1.5;
-    color: #FFFFFF;
-    margin-bottom: 25px;
+.about__text {
+    width: 430px;
 }
 
-.choose-us__text {
-font-size: 18px;
-    font-weight: 300;
-    color: #FFFFFF;
-    line-height: 1.4;
+.about__image {
+    height: 630px;
 }
+
+
+.choose__list-bottom {
+    display: flex;
+    justify-content: space-between;
+}
+
+.choose__header {
+    color: rgba(218, 52, 20, 1);
+    margin-bottom: 65px;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 1;
+}
+
+ .choose__heading {
+   color: #FFFFFF;
+     font-size: 20px;
+     font-weight: 400;
+     line-height: 1.5;
+     margin-bottom: 20px;
+ }
+
