Added services section markup

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -2,7 +2,7 @@
 padding-top: 180px;
     padding-bottom: 40px;
     background-image: url("../../src/image/about-us_bg.png");
-    background-position: left  top px;
+    background-position: left  top ;
     background-repeat: no-repeat;
     border-bottom: 2px solid #FFFFFF;
 }
