--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -1,4 +1,4 @@
-.button--style {
+.button {
     background: rgba(218, 52, 20, 1);
     color: rgba(255, 255, 255, 1);
     border: 1px solid rgba(218, 52, 20, 1);
