--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -9,6 +9,11 @@ padding-top: 40px;
 
 .hero__button {
     text-transform: uppercase;
+    padding-top: 15px;
+    padding-right: 30px;
+    padding-bottom: 15px;
+    padding-left: 30px;
+    border-radius: 8px;
 }
 
 
