--- a/src/styles/contacts.css
+++ b/src/styles/contacts.css
@@ -1,7 +1,6 @@
 .contact {
     padding-top: 125px;
-    padding-bottom: 180px;
-
+    padding-bottom: 80px;
 background-color: rgba(0, 0, 0, 0.64);
 }
 
@@ -9,6 +8,8 @@ background-color: rgba(0, 0, 0, 0.64);
 .contacts__container {
     display: flex;
     justify-content: space-between;
+    padding-top: 50px;
+    padding-bottom: 100px;
 }
 
 .contacts__heading{
@@ -16,13 +17,28 @@ background-color: rgba(0, 0, 0, 0.64);
     margin-bottom: 30px;
 }
 
+.contacts__subheading{
+    margin-bottom: 30px;
+}
+
+
 .contacts__list {
     display: flex;
 gap: 130px;
 
 }
 
+.contacts__text-wrapper {
+    color: #FFFFFF;
+    margin-bottom: 30px;
+}
+
 .contacts__item {
     width: 200px;
-   padding-bottom: 30px;
+
 }
+
+/*.contacts--bottom {*/
+/*    display: flex;*/
+/*    align-items: baseline;*/
+/*}*/
