--- a/src/styles/contacts.css
+++ b/src/styles/contacts.css
@@ -17,15 +17,28 @@ background-color: rgba(0, 0, 0, 0.64);
     margin-bottom: 30px;
 }
 
+.contacts__text {
+    display: flex;
+    flex-grow: 4;
+}
+
 .contacts__subheading{
-    margin-bottom: 30px;
+    display: flex;
+    flex-grow: 2;
+    text-align: end;
+    font-size: 20px;
+    line-height: 1.3;
+    margin-bottom: 20px;
+    font-weight: 400;
 }
 
 
 .contacts__list {
     display: flex;
 gap: 130px;
-
+font-size: 20px;
+    font-weight: 300;
+    line-height: 1;
 }
 
 .contacts__text-wrapper {
