--- a/src/styles/our-instagram.css
+++ b/src/styles/our-instagram.css
@@ -12,11 +12,13 @@
 }
 
 .our-instagram__heading::after {
-    margin-top: 15px;
+    content: "";
     display: flex;
-    justify-content: center;
+    background-color: rgba(218, 52, 20, 1);
+    width: 175px;
     height: 1px;
-    content:  url("../../src/image/Rectangle40.png");
+    margin-top: 20px;
+    margin-bottom: 35px;
 }
 
 .our-instagram__text {
