--- a/src/general.css
+++ b/src/general.css
@@ -63,6 +63,7 @@ body {
     font-weight: 400;
     line-height: 1.3;
     display: flex;
+    justify-content: center;
     gap: 85px;
     color: #FFFFFF;
 }
