--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -21,14 +21,17 @@
 
 
 .services__button {
-    display: none;
+  visibility: hidden;
+    opacity: 0;
+    transition: all .3s;
 }
 
 .services li:hover button {
-    display: block;
+    visibility: visible;
+    opacity: 1;
 }
 
-.services li:hover {
+.services__item:hover {
     transition: transform .2s;
     transform: scale(1.2);
 }
